# rust-edr

./: .gitignore  BUILD_AND_RUN.md  COMPONENT_SUMMARY.md  Cargo.toml  DASHBOARDS_ADDED.md  DASHBOARD_GUIDE.md  FORENSICS_FEATURES.md  FORENSICS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  LIMITATIONS_AND_ROADMAP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPO_SIZE_ANALYSIS.md  TESTING_GUIDE.md  UBUNTU_VM_SETUP.md  WORKFLOW_VISUALIZATION.md  cleanup-repo.sh  map.md  setup.sh  start_dashboard.sh  start_dashboard_tmux.sh
config/: default.toml
edr-dashboard/: COMPLETE.md  Cargo.toml  DEPLOYMENT.md  README.md  WEBSOCKET_FIX.md  debug-connection.sh  start.sh  test.sh
edr-dashboard/agent/: main.rs
edr-dashboard/server/: main.rs  tui.rs
edr-dashboard/src/: types.rs
src/: main.rs  types.rs
src/detection/: correlator.rs  engine.rs  ioc.rs  mod.rs  rules.rs  scoring.rs
src/forensics/: archiver.rs  mod.rs  shell_spawner.rs  snapshot.rs
src/monitors/: file.rs  memory.rs  mod.rs  network.rs  process.rs  rootkit.rs  user.rs
src/response/: actions.rs  mod.rs
src/telemetry/: event_store.rs  logger.rs  mod.rs
tests/: README.md  run_malicious_tests.sh
tests/malicious_samples/: data_exfiltration_simulator.sh  lateral_movement_simulator.sh  privilege_escalation_simulator.sh  ransomware_simulator.sh  reverse_shell_simulator.sh  rootkit_simulator.sh
