[package]
name = "rust-edr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Endpoint Detection and Response (EDR) system for Linux"
license = "MIT"
repository = "https://github.com/yourusername/rust-edr"

[[bin]]
name = "rust-edr"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File System Monitoring
inotify = "0.10"

# Process Monitoring
procfs = "0.16"

# System Information
users = "0.11"
whoami = "1.5"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4"] }

# Database/Storage (for event logging)
sled = "0.34"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
