# EDR Server - Central monitoring dashboard for multiple endpoints

[package]
name = "edr-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "edr_common"
path = "src/lib.rs"

[[bin]]
name = "edr-server"
path = "server/main.rs"

[[bin]]
name = "edr-agent"
path = "agent/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Networking
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI (Terminal UI)
ratatui = "0.26"
crossterm = "0.27"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"

# System Information (for agents)
sysinfo = "0.30"
whoami = "1.5"

# File System Monitoring
inotify = { version = "0.10", optional = true }
procfs = { version = "0.16", optional = true }

[features]
default = ["agent-features"]
agent-features = ["inotify", "procfs"]
